RESOLVED FIXED116198
makeRGBAFromNSColor throws an exception if given a color in a greyscale colorspace
https://bugs.webkit.org/show_bug.cgi?id=116198
Summary makeRGBAFromNSColor throws an exception if given a color in a greyscale color...
Tim Horton
Reported 2013-05-15 18:11:15 PDT
The comment in ColorMac.mm about NSColor things not throwing exceptions is a lie. <rdar://problem/13904395>
Attachments
patch (2.21 KB, patch)
2013-05-15 18:19 PDT, Tim Horton
simon.fraser: review+
Tim Horton
Comment 1 2013-05-15 18:19:45 PDT
Tim Horton
Comment 2 2013-05-15 18:22:00 PDT
Comment on attachment 201904 [details] patch View in context: https://bugs.webkit.org/attachment.cgi?id=201904&action=review > Source/WebCore/platform/graphics/mac/ColorMac.mm:63 > + return makeRGBA(0, 0, 0, 0); Not sure what a reasonable fallback color is.
Simon Fraser (smfr)
Comment 3 2013-05-15 18:30:24 PDT
Comment on attachment 201904 [details] patch View in context: https://bugs.webkit.org/attachment.cgi?id=201904&action=review > Source/WebCore/platform/graphics/mac/ColorMac.mm:61 > + Maybe remove this blank line.
Tim Horton
Comment 4 2013-05-15 18:35:12 PDT
Note You need to log in before you can comment on or make changes to this bug.