makeRGBAFromNSColor throws an exception if given a color in a greyscale colorspace https://bugs.webkit.org/show_bug.cgi?id=116198 <rdar://problem/13904395>

Reviewed by Simon Fraser.

Block Objective-C exceptions in makeRGBAFromNSColor.
Remove a comment saying that they're impossible.

Convert the incoming color to the DeviceRGB colorspace to match
existing color sources. Some rare cases (attributed strings that come
from PDFKit) can have DeviceGrayscale color spaces, which would
previously throw an exception here.

* platform/graphics/mac/ColorMac.mm:
(WebCore::makeRGBAFromNSColor):


Canonical link: https://commits.webkit.org/134596@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@150167 268f45cc-cd09-0410-ab3c-d52691b4dbfc